--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,9 @@
-name: latlng_picker
+name: map_latlng_picker
 description: "A beautiful Google Maps location latitude and longitude picker with physics-based animations. Features an animated pin with bounce effects, elevation, and haptic feedback."
 version: 1.0.0
-homepage: https://github.com/edemekong/latlng_picker
-repository: https://github.com/edemekong/latlng_picker
-issue_tracker: https://github.com/edemekong/latlng_picker/issues
+homepage: https://github.com/edemekong/map_latlng_picker
+repository: https://github.com/edemekong/map_latlng_picker
+issue_tracker: https://github.com/edemekong/map_latlng_picker/issues
 
 environment:
   sdk: ^3.7.0
